# my-py-style

./: LICENSE  Makefile  README.md  _config.yml  contexts.py  core.py  interfaces.py  main.py  prompt.md  pyproject.toml  scaffold.py
.github/workflows/: sync-docs.yml
docs/: prompt.md
examples/cli-project/: README.md  cli.py  config.py  contexts.py  pyproject.toml
examples/cli_project/: README.md  __init__.py  cli.py  config.py  contexts.py  core.py  import_utils.py  interfaces.py  main.py  pyproject.toml  requirements.txt
examples/cli_project/tests/: __init__.py
examples/ml_project/: .gitignore  cli.py  config.py  core.py
scripts/: sync-prompt.py
