[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-kit"
version = "1.0.0"
description = "Go-ish Python patterns, guidelines & project scaffolder"
authors = [
    {name = "Yamaç Eren Ay", email = "yamaceay@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["python", "patterns", "scaffolding", "architecture", "go-style"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
]

[project.urls]
Homepage = "https://github.com/yamaceay/py-kit"
Documentation = "https://yamaceay.github.io/py-kit"
Repository = "https://github.com/yamaceay/py-kit"
Issues = "https://github.com/yamaceay/py-kit/issues"

[project.scripts]
go-ish-scaffold = "scaffold:main"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true