[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-project"
version = "0.1.0"
description = "CLI tool for testing scaffolding"
authors = [
    {name = "Yamaç Eren Ay"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    'logging',
]

[project.scripts]
cli-project = "cli-project.main:main"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
