[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cli_project"
version = "0.1.0"
description = "Test CLI program for Python"
authors = [
    {name = "Yamaç Eren Ay", email = "yamaceay@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    'logging',
]

[project.scripts]
cli_project = "cli_project.main:main"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
